# fin-tools

./: .gitignore  ccxt_exp.py  main.py  pyproject.toml
fin_tools/aggregations/: __init__.py  bar_maker.py
fin_tools/clients/: binance.py
fin_tools/formatting/: __init__.py  utils.py
